Fix: Player controls appear over user menu on mobile

--- a/web/static/web/scss/_nav.scss
+++ b/web/static/web/scss/_nav.scss
@@ -145,7 +145,7 @@
 	    opacity: 0;
 	    transition: transform 150ms ease-in-out, opacity 300ms ease-in-out;
 	    background: linear-gradient(90deg, rgba(235,235,235,1) 0%, rgba(226,226,226,1) 35%, rgba(238,238,238,1) 100%);
-	    z-index: 1;
+	    z-index: 100;
 
 		> button {
 			margin: 10px auto 10px 10px;
